--- a/app/views/home/_section.html.erb
+++ b/app/views/home/_section.html.erb
@@ -1,9 +1,11 @@
 <section class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div class="col-md-6 offset-6 mt-5 text-white">
+      <h1 class="display-4">Bukan Programmer</h1>
+      <p class="lead">Belajar programming untuk investasi masa depan.</p>
+      <hr class="my-4">
+      <p>Cara terbaik belajar programming adalah segera memulainya.</p>
+      <a class="btn btn-danger btn-lg" href="#" role="button">Belajar sekarang</a>
+    </div>
   </div>
 </section>
