--- a/app/views/home/_section.html.erb
+++ b/app/views/home/_section.html.erb
@@ -13,7 +13,7 @@
 
   <section class="album py-3 bg-light">
     <div class="container">
-      <h1 class="h3 my-4">Belajar apa saja?</h1>
+      <h1 class="h3 my-4"><strong>Belajar apa saja?</strong></h1>
       <div class="row">
         <% 8.times do %>
           <div class="col-md-3">
