add navigasi link

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,13 +3,15 @@
     <div class="row">
       <div class="col-sm-6">
         <h4 class="text-dark">Tentang kami</h4>
-        <p class="text-secondary text-justify">Bukan Programmer merupakan situs pendidikan yang bertujuan untuk mengenalkan dunia Programming sebagai salah satu penunjang Revolusi Industri 4.0. <a href="">[Selengkapnya...]</a></p>
+        <p class="text-secondary text-justify">Bukan Programmer merupakan sebuah situs pembelajaran yang bertujuan untuk mengenalkan dunia Programming sebagai salah satu penunjang Revolusi Industri 4.0. <a href="">[Selengkapnya...]</a></p>
       </div>
       <div class="col-sm-2">
         <h4 class="text-dark">Navigasi</h4>
-        <a class="text-secondary" href="">Blog</a></br>
-        <a class="text-secondary" href="">Tentang</a></br>
-        <a class="text-secondary" href="">FAQs</a>
+        <a class="text-secondary" href="">Artikel</a></br>
+        <a class="text-secondary" href="">Kategori</a></br>
+        <a class="text-secondary" href="">Tentang Kami</a></br>
+        <a class="text-secondary" href="">Ketentuan</a>
+        <a class="text-secondary" href="">Kebijakan</a>
       </div>
       <div class="col-sm-4">
         <h4 class="text-dark">Contact</h4>
