--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,12 +10,12 @@
         <a class="text-secondary" href="">Artikel</a></br>
         <a class="text-secondary" href="">Kategori</a></br>
         <a class="text-secondary" href="">Tentang Kami</a></br>
-        <a class="text-secondary" href="">Ketentuan</a>
+        <a class="text-secondary" href="">Ketentuan</a></br>
         <a class="text-secondary" href="">Kebijakan</a>
       </div>
       <div class="col-sm-4">
         <h4 class="text-dark">Contact</h4>
-        <a href="mailto:admin@bukanprogrammer.com"><i class="text-info fas fa-envelope"></i> <span class="text-secondary">admin[at]bukanprogrammer[dot]com</span></a></br>
+        <a href="mailto:admin@bukanprogrammer.com" class="text-secondary"><i class="fas fa-envelope"></i> admin[at]bukanprogrammer[dot]com</a></br>
       </div>
       <div class="col-sm-12 text-center">
         <hr class="my-4">
