--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
-<%= render 'section' %>
+<main>
+  <%= render 'section1' %>
+  <%= render 'section2' %>
+  <%= render 'section3' %>
+  <%= render 'section4' %>
+</main>
