--- a/app/assets/stylesheets/bp-style.css
+++ b/app/assets/stylesheets/bp-style.css
@@ -1,5 +1,5 @@
 header {
-  border-bottom: 1px solid lightgrey;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 main {
@@ -19,7 +19,7 @@ section.bp-home {
   box-shadow: inset rgba(3,27,78,.1)0 2px 4px 0;
 }
 
-section {
+section.jumbotron {
   box-shadow: inset rgba(3,27,78,.1)0 2px 4px 0;
 }
 
@@ -28,6 +28,5 @@ a.btn-rounded {
 }
 
 footer {
-  border-top: 2px solid salmon;
-  box-shadow: inset rgba(3,27,78,.1)0 2px 4px 0;
+  border-top: 2px solid lightgrey;
 }
