--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
           <a class="nav-link" href="#">Kategori</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Problem & Solving</a>
+          <a class="nav-link" href="#">Error Note</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
