--- a/app/assets/stylesheets/bp-style.css
+++ b/app/assets/stylesheets/bp-style.css
@@ -19,7 +19,8 @@ section.bp-home {
   box-shadow: inset rgba(3,27,78,.1)0 2px 4px 0;
 }
 
-section.jumbotron {
+section.news-letter {
+  background-color: #8f00ff;
   box-shadow: inset rgba(3,27,78,.1)0 2px 4px 0;
 }
 
@@ -28,5 +29,5 @@ a.btn-rounded {
 }
 
 footer {
-  border-top: 2px solid lightgrey;
+  border-top: 2px solid #6f00ff;
 }
