add class blockquote-footer between h1

--- a/app/views/home/_section4.html.erb
+++ b/app/views/home/_section4.html.erb
@@ -1,6 +1,6 @@
 <section class="album py-3 bg-light">
   <div class="container">
-    <h1 class="h3 my-4"><strong>Kumpulan error & cara mengatasinya</strong></h1>
+    <h1 class="h3 my-4"><strong><i class="blockquote-footer">Error list</i></strong></h1>
     <div class="row">
       <ul class="list-unstyled">
         <% 3.times do %>
