--- a/app/views/home/_section2.html.erb
+++ b/app/views/home/_section2.html.erb
@@ -1,6 +1,6 @@
 <section class="album py-3 bg-light">
     <div class="container">
-      <h1 class="h3 my-4"><strong>Belajar apa saja?</strong></h1>
+      <h1 class="h3 my-4"><strong><i class="blockquote-footer">Belajar apa saja?</i></strong></h1>
       <div class="row">
         <% 4.times do %>
           <div class="col-md-3">
