--- a/app/views/home/_section3.html.erb
+++ b/app/views/home/_section3.html.erb
@@ -1,6 +1,6 @@
 <section class="album py-3 bg-light">
   <div class="container">
-    <h1 class="h3 my-4"><strong>Artikel terbaru</strong></h1>
+    <h1 class="h3 my-4"><strong><i class="blockquote-footer">Artikel terbaru</i></strong></h1>
     <div class="row">
       <% 8.times do %>
         <div class="col-md-3">
