--- a/app/views/home/_section5.html.erb
+++ b/app/views/home/_section5.html.erb
@@ -1,8 +1,8 @@
-<section class="jumbotron jumbotron-fluid mb-0">
+<section class="jumbotron jumbotron-fluid news-letter mb-0">
   <div class="container">    
     <div class="row">
-      <div class="col-md-12 mt-3 text-dark">
-        <h1 class="h3">Surat Kabar</h1>
+      <div class="col-md-12 mt-3 text-light">
+        <h1 class="h3 my-4"><strong><i class="blockquote-footer text-light">Surat kabar</i></strong></h1>
         <p class="mt-4">
           Subscribe agar mendapatkan berita terbaru dari kami.
         </p>
@@ -21,9 +21,6 @@
         <form class="form-inline">
           <a class="text-danger h2" href=""><i class="fab fa-youtube"></i></a>
           <a class="text-dark h2 ml-2" href=""><i class="fab fa-github"></i></a>
-          <a class="text-primary h2 ml-2" href=""><i class="fab fa-facebook"></i></a>
-          <a class="text-info h2 ml-2" href=""><i class="fab fa-twitter"></i></a>
-          <a class="text-warning h2 ml-2" href=""><i class="fab fa-instagram"></i></a>
         </form>
       </div>
     </div>
