--- a/app/views/home/_section2.html.erb
+++ b/app/views/home/_section2.html.erb
@@ -1,4 +1,4 @@
-<section class="album py-3 bg-light">
+<section class="album py-3 bg-white shadow-sm py-4">
     <div class="container">
       <h1 class="h3 my-4"><strong><i class="blockquote-footer">Belajar apa saja?</i></strong></h1>
       <div class="row">
