--- a/app/views/home/_section3.html.erb
+++ b/app/views/home/_section3.html.erb
@@ -1,10 +1,10 @@
-<section class="album py-3 bg-light">
+<section class="album py-3">
   <div class="container">
     <h1 class="h3 my-4"><strong><i class="blockquote-footer">Artikel terbaru</i></strong></h1>
     <div class="row">
-      <% 8.times do %>
-        <div class="col-md-3">
-          <div class="card my-3">
+      <% 6.times do %>
+        <div class="col-md-4">
+          <div class="card my-3 shadow-sm">
             <%= image_tag('icon-ruby.png', class: 'card-img-top') %>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
