--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,16 @@
-<main>
+<main class="shadow-sm">
   <%= render 'section1' %>
   <%= render 'section2' %>
-  <%= render 'section3' %>
-  <%= render 'section4' %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <%= render 'section3' %>
+        <%= render 'section4' %>
+      </div>
+      <div class="col-md-3">
+        <%= render 'layouts/sidebar' %>
+      </div>
+    </div>
+  </div>
   <%= render 'section5' %>
 </main>
