--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<header class="fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light pr-5 pl-5">
+<header class="fixed-top shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white px-5">
     <a class="navbar-brand" href="#">
       <%= image_tag('bp-logo-color.png', height: 40) %>
     </a>
