--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <%= render 'section4' %>
       </div>
       <div class="col-md-3">
-        <%= render 'layouts/sidebar' %>
+        <%= render 'layouts/global_sidebar' %>
       </div>
     </div>
   </div>
