--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 <main class="shadow-sm">
-  <%= render 'section1' %>
+  <%= render 'global_section' %>
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <%= render 'section2' %>
+        <%= render 'index_section' %>
       </div>
       <div class="col-md-3">
         <%= render 'layouts/global_sidebar' %>
