add class -> bg-white shadow-sm my-5 px-3

--- a/app/views/home/_section3.html.erb
+++ b/app/views/home/_section3.html.erb
@@ -1,4 +1,4 @@
-<section class="album py-3">
+<section class="album bg-white shadow-sm my-5 py-3 px-3">
   <div class="container">
     <h1 class="h3 my-4"><strong><i class="blockquote-footer">Artikel terbaru</i></strong></h1>
     <div class="row">
