--- a/app/views/home/_section4.html.erb
+++ b/app/views/home/_section4.html.erb
@@ -1,4 +1,4 @@
-<section class="album py-3 bg-light">
+<section class="album bg-white py-4 px-4 shadow-sm mb-5">
   <div class="container">
     <h1 class="h3 my-4"><strong><i class="blockquote-footer">Error list</i></strong></h1>
     <div class="row">
@@ -14,5 +14,22 @@
         <% end %>
       </ul>
     </div>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </section>
