--- a/app/views/articles/_index_section.html.erb
+++ b/app/views/articles/_index_section.html.erb
@@ -1,19 +1,20 @@
-<section class="album py-3">
+<section class="album py-3 bg-white my-5 px-4 py-4 shadow-sm">
   <div class="container">
     <h1 class="h3 my-4"><strong><i class="blockquote-footer">Semua artikel</i></strong></h1>
     <div class="row">
-      <% 6.times do %>
+      <% @articles.each do |a| %>
         <div class="col-md-4">
-          <div class="card my-3 shadow-sm">
-            <%= image_tag('icon-ruby.png', class: 'card-img-top') %>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <%= link_to article_path(a), class: 'text-decoration-none text-secondary' do %>
+            <div class="card my-3 shadow-sm">
+              <%= image_tag('bp-home.jpg', class: 'card-img-top') %>
+              <div class="card-body">
+                <h5 class="h3 font-weight-bold card-title"><%= a.title.titleize %></h5>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"><%= time_ago_in_words(a.created_at).capitalize %></small>
+              </div>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-          </div>
+          <% end %>
         </div>
       <% end %>
     </div>
