rename render section

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,16 @@
 <main class="shadow-sm">
-  <%= render 'section1' %>
-  <%= render 'section2' %>
+  <%= render 'jumbotron_section' %>
+  <%= render 'category_section' %>
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <%= render 'section3' %>
-        <%= render 'section4' %>
+        <%= render 'article_section' %>
+        <%= render 'logserror_section' %>
       </div>
       <div class="col-md-3">
         <%= render 'layouts/global_sidebar' %>
       </div>
     </div>
   </div>
-  <%= render 'section5' %>
+  <%= render 'newsletter_section' %>
 </main>
