--- a/app/views/layouts/_global_sidebar.html.erb
+++ b/app/views/layouts/_global_sidebar.html.erb
@@ -1,34 +1,28 @@
 <aside class="blog-sidebar text-secondary my-5">
-  <div class="card shadow-sm my-4">
-    <div class="card-header"><h1 class="h4">Kategori</h1></div>
-    <div class="card-body">
-      <ol class="list-unstyled mb-0">
-        <li><a href="#">March 2014</a></li>
-        <li><a href="#">February 2014</a></li>
-        <li><a href="#">January 2014</a></li>
-        <li><a href="#">December 2013</a></li>
-        <li><a href="#">November 2013</a></li>
-        <li><a href="#">October 2013</a></li>
-        <li><a href="#">September 2013</a></li>
-        <li><a href="#">August 2013</a></li>
-        <li><a href="#">July 2013</a></li>
-        <li><a href="#">June 2013</a></li>
-        <li><a href="#">May 2013</a></li>
-        <li><a href="#">April 2013</a></li>
-      </ol>
-    </div>
+  <div class="album bg-white shadow-sm my-4 py-3">
+    <div class="px-3"><h1 class="h4">- Kategori -</h1></div>
+    <hr class="mx-3">
+    <ul class="list-group mx-3">
+      <% 5.times do %>
+        <li class="list-group-item d-flex justify-content-between align-items-center my-1">
+          Cras justo odio
+          <span class="badge badge-primary badge-pill">14</span>
+        </li>
+      <% end %>
+    </ul>
   </div>
 
-  <div class="card shadow-sm my-4">
-    <div class="card-header"><h1 class="h4">Artikel lainnya</h1></div>
-    <div class="card-body">
-      <ol class="list-unstyled">
-        <li><a href="#">GitHub</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Facebook</a></li>
-      </ol>
+  <div class="album bg-white shadow-sm my-4 py-3">
+      <div class="px-3"><h1 class="h4">- Artikel lainnya -</h1></div>
+      <hr class="mx-3">
+      <ul class="list-group mx-3">
+        <% 3.times do %>
+          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
+            Cras justo odio
+          </li>
+        <% end %>
+      </ul>
     </div>
-  </div>
-  </div>
-</aside><!-- /.blog-sidebar -->
+
+</aside>
 
