--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class: 'nav-link' %>
+          <%= link_to 'Home', root_path, class: 'nav-link', data: {turbolinks: false} %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Artikel', articles_path, class: 'nav-link' %>
+          <%= link_to 'Artikel', articles_path, class: 'nav-link', data: {turbolinks: false} %>
         </li>
         <li class="nav-item">
           <%= link_to 'Kategori', categories_path, class: 'nav-link' %>
