change render -> section1 to global_section

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,13 @@
 <main class="shadow-sm">
-  <%= render 'section1' %>
+  <%= render 'global_section' %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <%= render 'index_section' %>
+      </div>
+      <div class="col-md-3">
+        <%= render 'layouts/global_sidebar' %>
+      </div>
+    </div>
+  </div>
 </main>
