--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
           <%= link_to 'Artikel', articles_path, class: 'nav-link', data: {turbolinks: false} %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Kategori', categories_path, class: 'nav-link' %>
+          <%= link_to 'Kategori', categories_path, class: 'nav-link', data: {turbolinks: false} %>
         </li>
         <li class="nav-item">
           <%= link_to 'Error Logs', errors_path, class: 'nav-link' %>
