--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <main class="shadow-sm">
   <%= render 'global_section' %>
   <div class="container">
@@ -11,3 +13,4 @@
     </div>
   </div>
 </main>
+
