--- a/app/views/articles/_show_section.html.erb
+++ b/app/views/articles/_show_section.html.erb
@@ -4,9 +4,13 @@
       <div class="blog-post">
         <h1 class="blog-post-title h3 font-weight-bold"><%= @article.title %></h1>
         <p class="blog-post-meta"><%= I18n.l(@article.created_at.to_date) %> Oleh Dede Irwanto</p>
-        <%= image_tag('bp-home.jpg', class: 'mb-4 img-thumbnail') %>
+        <%= image_tag("#{@article.image_feature}", class: 'mb-4 img-thumbnail') %>
         <%= @article.content %>
       </div>
     </div>
   </div>
+  <%= link_to 'Edit', edit_article_path(@article) %> |
+  <%= link_to 'Back', articles_path %>
 </section>
+
+
