--- a/app/views/layouts/_global_sidebar.html.erb
+++ b/app/views/layouts/_global_sidebar.html.erb
@@ -13,13 +13,15 @@
   </div>
 
   <div class="album bg-white shadow-sm my-4 py-3">
-      <div class="px-3"><h1 class="h4">- Artikel lainnya -</h1></div>
+      <div class="px-3"><h1 class="h4">- Artikel terbaru -</h1></div>
       <hr class="mx-3">
       <ul class="list-group mx-3">
-        <% 3.times do %>
-          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
-            Cras justo odio
-          </li>
+        <% recent_articles.each do |r| %>
+          <%= link_to article_path(r), class: 'text-decoration-none text-secondary' do %>
+            <li class="list-group-item d-flex justify-content-between align-items-center my-1">
+              <%= r.title %>
+            </li>
+          <% end %>
         <% end %>
       </ul>
     </div>
