--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,27 +1,38 @@
-<%= form_with(model: category, local: true) do |form| %>
-  <% if category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
+<section class="album bg-white shadow-sm my-5 px-4 pt-4 pb-0">
+  <div class="container">
+    <div class="row">
+      <div class="blog-post col-md-12">
+        <h1 class="blog-post-title h3 font-weight-bold">New Category</h1>
+        <p class="blog-post-meta"></p>
+        <%= form_with(model: category, local: true) do |form| %>
+          <% if category.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
 
-      <ul>
-        <% category.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+              <ul>
+                <% category.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+
+          <div class="form-group">
+            <%= form.label :name %>
+            <%= form.text_field :name, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :image_feature %>
+            <%= form.file_field :image_feature, class: 'form-control-file' %>
+          </div>
+
+          <div class="form-group">
+            <%= form.submit 'Create Category', class: 'btn btn-primary' %>
+            <%= link_to 'Kembali', categories_path, class: 'btn btn-danger' %>
+          </div>
         <% end %>
-      </ul>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
   </div>
-
-  <div class="field">
-    <%= form.label :image_feature %>
-    <%= form.text_field :image_feature %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</section>
