--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -33,7 +33,7 @@
           </div>
 
           <div class="form-group">
-            <%= form.submit 'Post Article', class: 'btn btn-primary' %>
+            <%= form.submit 'Create Article', class: 'btn btn-primary' %>
             <%= link_to 'Kembali', articles_path, class: 'btn btn-danger' %>
           </div>
         <% end %>
