--- a/app/views/categories/_index_section.html.erb
+++ b/app/views/categories/_index_section.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <% @categories.each do |c| %>
         <div class="col-md-3">
-          <div class="card mb-4 shadow-sm px-3 py-3">
+          <div class="card mb-4 shadow-sm px-3 py-3 my-3">
             <%= image_tag("#{c.image_feature}", class: 'bd-placeholder-img card-img-top') %>
             <h1 class="h4 text-center mt-3"><%= c.name.titleize %></h1>
           </div>
