change link to category

--- a/app/views/categories/_show_section.html.erb
+++ b/app/views/categories/_show_section.html.erb
@@ -2,15 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="blog-post">
-        <h1 class="blog-post-title h3 font-weight-bold"><%= @article.title %></h1>
-        <p class="blog-post-meta"><%= I18n.l(@article.created_at.to_date) %> Oleh Dede Irwanto</p>
-        <%= image_tag("#{@article.image_feature}", class: 'mb-4 img-thumbnail') %>
-        <%= @article.content %>
+        <h1 class="blog-post-title h3 font-weight-bold"><%= @category.name %></h1>
+        <p class="blog-post-meta"><%= I18n.l(@category.created_at.to_date) %> Oleh Dede Irwanto</p>
+        <%= image_tag("#{@category.image_feature}", class: 'mb-4 img-thumbnail') %>
       </div>
     </div>
   </div>
-  <%= link_to 'Edit', edit_article_path(@article) %> |
-  <%= link_to 'Back', articles_path %>
+  <%= link_to 'Edit', edit_category_path(@category) %> |
+  <%= link_to 'Back', categories_path %>
 </section>
 
 
