--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
-
-<p>
-  <strong>Image feature:</strong>
-  <%= @category.image_feature %>
-</p>
+<main class="shadow-sm">
+  <%= render 'global_section' %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <%= render 'show_section' %>
+      </div>
+      <div class="col-md-3">
+        <%= render 'layouts/global_sidebar' %>
+      </div>
+    </div>
+  </div>
+</main>
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
