--- a/app/views/layouts/_global_sidebar.html.erb
+++ b/app/views/layouts/_global_sidebar.html.erb
@@ -1,30 +1,31 @@
 <aside class="blog-sidebar text-secondary my-5">
   <div class="album bg-white shadow-sm my-4 py-3">
-    <div class="px-3"><h1 class="h4">- Kategori -</h1></div>
+    <div class="px-3"><h1 class="h4">- Artikel terbaru -</h1></div>
     <hr class="mx-3">
     <ul class="list-group mx-3">
-      <% 5.times do %>
-        <li class="list-group-item d-flex justify-content-between align-items-center my-1">
-          Cras justo odio
-          <span class="badge badge-primary badge-pill">14</span>
-        </li>
+      <% recent_articles.each do |r| %>
+        <%= link_to article_path(r), class: 'text-decoration-none text-secondary' do %>
+          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
+            <%= r.title %>
+          </li>
+        <% end %>
       <% end %>
     </ul>
   </div>
 
   <div class="album bg-white shadow-sm my-4 py-3">
-      <div class="px-3"><h1 class="h4">- Artikel terbaru -</h1></div>
-      <hr class="mx-3">
-      <ul class="list-group mx-3">
-        <% recent_articles.each do |r| %>
-          <%= link_to article_path(r), class: 'text-decoration-none text-secondary' do %>
-            <li class="list-group-item d-flex justify-content-between align-items-center my-1">
-              <%= r.title %>
-            </li>
-          <% end %>
+    <div class="px-3"><h1 class="h4">- Kategori -</h1></div>
+    <hr class="mx-3">
+    <ul class="list-group mx-3">
+      <% categories.each do |c| %>
+        <%= link_to category_path(c), class: 'text-decoration-none text-secondary' do %>
+          <li class="list-group-item d-flex justify-content-between align-items-center my-1">
+            <%= c.name %>
+            <span class="badge badge-primary badge-pill">14</span>
+          </li>
         <% end %>
-      </ul>
-    </div>
-
+      <% end %>
+    </ul>
+  </div>
 </aside>
 
