--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -28,6 +28,15 @@
           </div>
 
           <div class="form-group">
+            <div class="form-row align-items-center">
+              <div class="col-auto my-1">
+                <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
+                <%= form.select("category_id", Category.all.collect {|c| [ c.name, c.id ] }, { include_blank: '- Pilih kategori -' }, class: 'custom-select mr-sm-2', id: 'inlineFormCustomSelect') %>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
             <%= form.label :image_feature %>
             <%= form.file_field :image_feature, class: 'form-control-file' %>
           </div>
