--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,7 @@
     <div class="row">
       <div class="col-md-9">
         <%= render 'show_section' %>
+        <%= render 'disquss' %>
       </div>
       <div class="col-md-3">
         <%= render 'layouts/global_sidebar' %>
