--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -24,7 +24,7 @@
 
           <div class="form-group">
             <%= form.label :content %>
-            <%= form.text_area :content, class: 'form-control' %>
+            <%= form.text_area :content, class: 'form-control', rows:20 %>
           </div>
 
           <div class="form-group">
@@ -42,8 +42,8 @@
           </div>
 
           <div class="form-group">
-            <%= form.submit 'Create Article', class: 'btn btn-primary' %>
-            <%= link_to 'Kembali', articles_path, class: 'btn btn-danger' %>
+            <%= form.submit 'Post', class: 'btn btn-primary btn-sm' %>
+            <%= link_to 'Kembali', articles_path, class: 'btn btn-danger btn-sm' %>
           </div>
         <% end %>
       </div>
