--- a/app/views/articles/_show_section.html.erb
+++ b/app/views/articles/_show_section.html.erb
@@ -5,10 +5,24 @@
         <h1 class="blog-post-title h3 font-weight-bold"><%= @article.title %></h1>
         <p class="blog-post-meta"><%= I18n.l(@article.created_at.to_date) %> Oleh Dede Irwanto</p>
         <%= image_tag("#{@article.image_feature}", class: 'mb-4 img-thumbnail') %>
-        <%= @article.content %>
+        <p class="text-justify">
+          <%= raw @article.content %>
+        </p>
+        <p class="mt-3">
+          <small>
+            <i class="far fa-folder-open"></i> <%= @article.category.name %>
+          </small>
+        </p>
+        <%= link_to articles_path(@article), class: 'btn btn-primary btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Kembali'} do %>
+          <i class="fas fa-arrow-left text-white"></i>
+        <% end %>
+        <%= link_to edit_article_path(@article), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
+          <i class="fas fa-edit text-white"></i>
+        <% end %>
+        <%= link_to article_path(@article), method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: 'Apakah anda yakin akan menghapus?', toggle: 'tooltip', placement: 'top', title: 'Hapus'} do %>
+          <i class="fas fa-trash text-white"></i>
+        <% end %>
       </div>
     </div>
   </div>
-  <%= link_to 'Edit', edit_article_path(@article) %> |
-  <%= link_to 'Back', articles_path %>
 </section>
