--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,15 @@
 <h1>Editing Article</h1>
 
-<%= render 'form', article: @article %>
-
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
+<main class="shadow-sm">
+  <%= render 'global_section' %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <%= render 'form', article: @article %>
+      </div>
+      <div class="col-md-3">
+        <%= render 'layouts/global_sidebar' %>
+      </div>
+    </div>
+  </div>
+</main>
