--- a/app/views/categories/_index_section.html.erb
+++ b/app/views/categories/_index_section.html.erb
@@ -1,7 +1,7 @@
 <section class="album py-3 bg-white my-5 px-4 py-4 shadow-sm">
   <div class="container">
     <h1 class="h3 my-4"><strong><i class="blockquote-footer">Semua kategori</i></strong></h1>
-    <%= link_to 'New Category', new_category_path, class: 'btn btn-primary btn-sm', data: {turbolinks: false} %>
+    <%= link_to 'New Category', new_category_path, class: 'btn btn-primary btn-sm' %>
     <div class="row">
       <% @categories.each do |c| %>
         <div class="col-md-3">
@@ -9,6 +9,7 @@
             <div class="card mb-4 shadow-sm px-3 py-3 my-3">
               <%= image_tag("#{c.image_feature}", class: 'bd-placeholder-img card-img-top') %>
               <h1 class="h4 text-center mt-3"><%= c.name.titleize %></h1>
+              <small class="text-center">(<%= c.articles_count %> Tulisan)</small>
             </div>
           <% end %>
         </div>
