--- a/app/views/home/_article_section.html.erb
+++ b/app/views/home/_article_section.html.erb
@@ -6,7 +6,7 @@
         <div class="col-md-4">
           <%= link_to article_path(a), class: 'text-decoration-none text-secondary' do %>
             <div class="card my-3 shadow-sm">
-              <%= image_tag('bp-home.jpg', class: 'card-img-top') %>
+              <%= image_tag("#{a.image_feature}", class: 'card-img-top') %>
               <div class="card-body">
                 <h5 class="h3 font-weight-bold card-title"><%= a.title.titleize %></h5>
               </div>
@@ -18,22 +18,6 @@
         </div>
       <% end %>
     </div>
-    <nav aria-label="Page navigation example">
-      <ul class="pagination">
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <%= will_paginate @articles, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
   </div>
 </section>
