fix layouts views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
     <%= stylesheet_link_tag    'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'https://cdn.tiny.cloud/1/9tfl7s1x316hbdjrvon6ea2dbf8c51nu42o2b5b8rmvtey1g/tinymce/5/tinymce.min.js' %>
-    <script>tinymce.init({selector:'textarea'});</script>
+    <script>
+    tinymce.init({
+      selector: "textarea",  // change this value according to your HTML
+      plugins: "fullscreen",
+    });
+    </script>
+
     <style>
       * {
         font-family: 'Roboto', sans-serif;
