--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class: 'nav-link', data: {turbolinks: false} %>
+          <%= link_to 'Home', root_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Artikel', articles_path, class: 'nav-link', data: {turbolinks: false} %>
+          <%= link_to 'Artikel', articles_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Kategori', categories_path, class: 'nav-link', data: {turbolinks: false} %>
+          <%= link_to 'Kategori', categories_path, class: 'nav-link' %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -30,8 +30,12 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <button class="btn btn-danger btn-sm mr-2"><i class="fas fa-angle-up"></i> Sign Up</button>
-        <button class="btn btn-primary btn-sm"><i class="fas fa-angle-right"></i> Sign In</button>
+        <%= link_to "https://github.com/bukanprogrammer", class: 'text-dark h2 mr-3' do %>
+          <i class="fab fa-github"></i>
+        <% end %>
+        <%= link_to "https://youtube.com", class: 'text-danger h2' do %>
+          <i class="fab fa-youtube"></i>
+        <% end %>
       </form>
     </div>
   </nav>
