--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="blog-post col-md-12">
-        <h1 class="blog-post-title h3 font-weight-bold">New Post</h1>
+        <h1 class="blog-post-title h3 font-weight-bold">Post</h1>
         <p class="blog-post-meta"></p>
         <%= form_with(model: article, local: true) do |form| %>
           <% if article.errors.any? %>
