--- a/app/views/articles/_show_section.html.erb
+++ b/app/views/articles/_show_section.html.erb
@@ -13,7 +13,7 @@
             <i class="far fa-folder-open"></i> <%= @article.category.name %>
           </small>
         </p>
-        <%= link_to articles_path(@article), class: 'btn btn-primary btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Kembali'} do %>
+        <%= link_to articles_path, class: 'btn btn-primary btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Kembali'} do %>
           <i class="fas fa-arrow-left text-white"></i>
         <% end %>
         <%= link_to edit_article_path(@article), class: 'btn btn-warning btn-sm', data: {toggle: 'tooltip', placement: 'top', title: 'Edit'} do %>
