--- a/app/views/home/_newsletter_section.html.erb
+++ b/app/views/home/_newsletter_section.html.erb
@@ -19,8 +19,10 @@
           Atau follow kami melalui:
         </p>
         <form class="form-inline">
-          <a class="text-danger h2" href=""><i class="fab fa-youtube"></i></a>
-          <a class="text-dark h2 ml-2" href=""><i class="fab fa-github"></i></a>
+          <!-- <a class="text&#45;danger h2" href=""><i class="fab fa&#45;youtube"></i></a> -->
+          <%= link_to 'https://github.com/bukanprogrammer', class: 'text-dark h2 ml-2' do %>
+            <i class="fab fa-github"></i>
+          <% end %>
         </form>
       </div>
     </div>
