--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
     <script>
     tinymce.init({
       selector: "textarea",  // change this value according to your HTML
-      plugins: "fullscreen",
+      plugins: "fullscreen code link advlist lists quickbars",
+      toolbar: "bold italic  link image  alignleft aligncenter alignright  alignjustify bullist numlist outdent indent code",
     });
     </script>
 
@@ -27,6 +28,7 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'layouts/notice' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
