--- a/app/views/articles/_global_section.html.erb
+++ b/app/views/articles/_global_section.html.erb
@@ -1,11 +1,13 @@
 <section class="jumbotron jumbotron-fluid bp-page mb-0">
   <div class="container">
-    <div class="col-md-5 offset-6 mt-5 text-white">
-      <h1 class="display-4">Artikel</h1>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control form-control-lg" placeholder="Cari tulisan">
-        <div class="input-group-append">
-          <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
+    <div class="row">
+      <div class="col-md-5 offset-6 mt-5 text-white">
+        <h1 class="display-4">Artikel</h1>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control form-control-lg" placeholder="Cari tulisan">
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
+          </div>
         </div>
       </div>
     </div>
